# giopg

./: Cargo.toml  README.md
etc/: log4rs.yaml
src/: args.rs  main.rs  secretbox.rs
