[package]
name = "giopg"
version = "0.1.0"
authors = ["Giorgio Gili Tos <giorgio.gilitos@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
log4rs = "0.10.0"
human-panic = "1.0.1"
structopt = "0.3.9"
rpassword = "4.0.5"
sodiumoxide = "0.2.5"
